--- a/web.browser/package.json
+++ b/web.browser/package.json
@@ -11,14 +11,19 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-react": "^6.10.3",
+    "react-dev-utils": "^0.5.2"
   },
   "dependencies": {
     "material-ui": "^0.17.3",
     "prop-types": "^15.5.7",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
