--- a/web.browser/package.json
+++ b/web.browser/package.json
@@ -15,6 +15,7 @@
     "react-dev-utils": "^0.5.2"
   },
   "dependencies": {
+    "eslint-plugin-jest": "^19.0.1",
     "material-ui": "^0.17.3",
     "prop-types": "^15.5.7",
     "react": "^15.5.3",
@@ -23,7 +24,8 @@
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.0"
+    "redux-devtools-extension": "^2.13.0",
+    "redux-logger": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
